--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="caixa">
           <nav>
             <ul>
-              <li><a href="teste.html">Passafome</a></li>
+              <li><a href="teste.html">Calculadora do passa (clique aqui)</a></li>
 
               </ul>
             </nav>
