--- a/teste.html
+++ b/teste.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" href="style2.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght&display=swap" rel="stylesheet">
-  <img src="dkdolar.png" alt="dkdolar" class="dkdolar">
+  <img src="div.png" alt="dkdolar" class="div">
  
   <title>Calculadora</title>
   
@@ -30,7 +30,7 @@
             </div>
 
               <div class="valor">
-                  <label for="valor">Valor PASSAFOME:</label>
+                  <label for="valor">Calcular:</label>
                   <input type="number" id="valor" name="valor" required placeholder="Valor do passafome (cada)">
             </div>
 
