--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght&display=swap" rel="stylesheet">
-  <img src="div.png" alt="dkdolar" class="dkdolar">
+  <img src="div.png" alt="div" class="div">
  
   <title>Calculadora</title>
   
@@ -30,7 +30,7 @@
 
     <body>
 
-
+          <li><a href="teste.html">Passafome</a></li>
       <div class="titulo">
           <h1> G2G COMMON SELLER </h1>
           <div class="dolar">
